--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -1,7 +1,8 @@
 name: Output information
 on: workflow_dispatch
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Output Github context
-      run: echo "${{ toJSON(github) }}"
+  output-information:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Output Github context
+        run: echo "${{ toJSON(github) }}"
